examples/negative/pipes/pipe_ambiguous/mod_a.kai
# Issue #594 — first declarer of `Source[t]`. Ships canonical map.

pub type Source[t] = MkSrcA(t)

pub fn map[a, b, e](s: Source[a], f: (a) -> b / e) : Source[b] / e {
  match s {
    MkSrcA(v) -> MkSrcA(f(v))
  }
}

pub fn unwrap[a](s: Source[a]) : a {
  match s {
    MkSrcA(v) -> v
  }
}
